--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -27,7 +27,7 @@ block content
         h2 Coming Soon
         //a.btn.btn-block.btn-google.btn-social(href='/auth/google')
         a.btn.btn-block.btn-google.btn-social(href='')
-          i.fab.fa-google-plus-g.fa-xs
+          i.fab.fa-google.fa-xs
           | Sign in with Google
         //a.btn.btn-block.btn-linkedin.btn-social(href='/auth/linkedin')
         a.btn.btn-block.btn-linkedin.btn-social(href='')
