--- a/views/account/profile.pug
+++ b/views/account/profile.pug
@@ -19,9 +19,17 @@ block content
             | Unverified: &nbsp;
             a(href='/account/verify') Send verification email
     .form-group.row
-      label.col-md-3.col-form-label.font-weight-bold.text-right(for='name') Name
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='uuid') UserID
       .col-md-7
-        input.form-control(type='text', name='name', id='name', value=user.profile.name, autocomplete='name')
+        input.form-control(type='text', name='uuid', id='uuid', value=user.uuid, readonly)
+    .form-group.row
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='firstName') First Name
+      .col-md-7
+        input.form-control(type='text', name='firstName', id='firstName', value=user.profile.firstName, autocomplete='firstName')
+    .form-group.row
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='lastName') Last Name
+      .col-md-7
+        input.form-control(type='text', name='lastName', id='lastName', value=user.profile.lastName, autocomplete='lastName')
     .form-group.row
       label.col-md-3.col-form-label.font-weight-bold.text-right Gender
       .col-sm-6
@@ -44,6 +52,18 @@ block content
       label.col-md-3.col-form-label.font-weight-bold.text-right(for='website') Website
       .col-md-7
         input.form-control(type='text', name='website', id='website', value=user.profile.website, autocomplete='url')
+    .form-group.row
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='jobs') Jobs
+      .col-md-7
+        input.form-control(type='text', name='jobs', id='jobs', value=user.profile.jobs, autocomplete)
+    .form-group.row
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='problem') Problem
+      .col-md-7
+        input.form-control(type='text', name='problem', id='problem', value=user.profile.problem, autocomplete)
+    .form-group.row
+      label.col-md-3.col-form-label.font-weight-bold.text-right(for='goal') Goal
+      .col-md-7
+        input.form-control(type='text', name='goal', id='goal', value=user.profile.goal, autocomplete)
     .form-group.row
       label.col-md-3.col-form-label.font-weight-bold.text-right Gravatar
       .col-sm-4
